# serializer version: 1
# name: test_config_entry_diagnostics
  dict({
    'devices': dict({
      'thermostat_123': dict({
        'available_thermostat_modes': list([
          'Program',
          'Eco',
          'Comfort',
          'Off',
          'Defrost',
          'Timer',
        ]),
        'coordinator': dict({
          'last_exception': None,
          'last_update_success': True,
          'update_interval': None,
        }),
        'current_temperature': 20.8,
        'device_id': 'thermostat_123',
        'device_name': 'Living Room Thermostat',
        'device_type': 'thermostat',
        'interface': 'homeassistant.components.THERMOSTAT',
        'is_online': True,
        'max_allowed_temperature': 30.0,
        'min_allowed_temperature': 5.0,
        'room_name': 'Living Room',
        'setpoint': 22.0,
        'temperature_unit': 'C',
        'thermostat_mode': 'Comfort',
      }),
      'thermostat_456': dict({
        'available_thermostat_modes': list([
          'Program',
          'Eco',
          'Comfort',
          'Off',
        ]),
        'coordinator': dict({
          'last_exception': None,
          'last_update_success': True,
          'update_interval': None,
        }),
        'current_temperature': 19.2,
        'device_id': 'thermostat_456',
        'device_name': 'Bedroom Thermostat',
        'device_type': 'thermostat',
        'interface': 'homeassistant.components.THERMOSTAT',
        'is_online': True,
        'max_allowed_temperature': 30.0,
        'min_allowed_temperature': 5.0,
        'room_name': 'Bedroom',
        'setpoint': 21.0,
        'temperature_unit': 'C',
        'thermostat_mode': 'Program',
      }),
    }),
    'entry': dict({
      'data': dict({
        'auth_implementation': 'watts',
        'device_id': 'test-device-id',
        'token': dict({
          'access_token': '**REDACTED**',
          'expires_at': 9999999999,
          'id_token': '**REDACTED**',
          'profile_info': '**REDACTED**',
          'refresh_token': '**REDACTED**',
        }),
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'watts',
      'entry_id': '01J0BC4QM2YBRP6H5G933CETI8',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Watts Vision',
      'unique_id': 'test-device-id',
      'version': 1,
    }),
    'hub_coordinator': dict({
      'device_count': 2,
      'last_exception': None,
      'last_update_success': True,
      'update_interval': 30.0,
    }),
  })
# ---
# name: test_device_diagnostics
  dict({
    'available_thermostat_modes': list([
      'Program',
      'Eco',
      'Comfort',
      'Off',
      'Defrost',
      'Timer',
    ]),
    'coordinator': dict({
      'last_exception': None,
      'last_update_success': True,
      'update_interval': None,
    }),
    'current_temperature': 20.8,
    'device_id': 'thermostat_123',
    'device_name': 'Living Room Thermostat',
    'device_type': 'thermostat',
    'interface': 'homeassistant.components.THERMOSTAT',
    'is_online': True,
    'max_allowed_temperature': 30.0,
    'min_allowed_temperature': 5.0,
    'room_name': 'Living Room',
    'setpoint': 22.0,
    'temperature_unit': 'C',
    'thermostat_mode': 'Comfort',
  })
# ---
